2015-12-18  Daniel Hawkins
	* doc/spell-docs/spell-summary.ps: Removed. Replaced by a text file for
	  easier maintenance in the future.
	* doc/spell-docs/spell-summary.txt: New text file with the information
	  formerly stored in spell-summary.ps.
	* doc/spell-docs/create_ps.sh: Add a new command to generate spell-summary.ps.

2015-12-15  Daniel Hawkins
	* doc/spell-docs/create_ps.sh: Abstracted the PostScript generation
	  out of the perl script. Also add spell-info.ps to the generated
	  documents.
	* doc/spell-docs/Makefile.am: Adjusted make definitions to
	  accomodate for new script.
	* doc/spell-docs/spell-info.ps: Removed. Generated from spell-info.txt.
	* doc/spell-docs/spell-lists.pl: Removed PostScript output.
	* doc/spell-docs/tome-of-magic.ps: Removed. Generated from
	  tome-of-magic.txt.

2015-12-13  Daniel Hawkins
	* server/skill_util.c: Fix phantom miss messages that should occur only with [Fire]+attack.

2015-12-12	Daniel Hawkins
	* doc/Makefile.am: Add build target for making documentation archive
	  with new dynamically generated spell lists.
	* doc/spell-docs/Makefile.am: Add build target for dynamic generation of spell lists.
	  Also, clean up the EXTRA_DIST declaration.
	* doc/spell-docs/spell-lists.pl: Added a perl script to dynamically generate spell lists.
	* doc/spell-docs/README: Updated to mention effort to upgrade docs.
	* doc/spell-docs/prayer-list.ps: Removed. Now dynamically generated from spell-lists.pl.
	* doc/spell-docs/prayer-list.txt: Removed. Now dynamically generated from spell-lists.pl.
	* doc/spell-docs/spell-list.ps: Removed. Now dynamically generated from spell-lists.pl.

2015-12-11	Daniel Hawkins
	* doc/scripts/bonus-extract.pl: Refactor old bonus-extract,
	  replacing it with a perl script that gets the bonuses from
	  stat_bonus.
	* doc/playbook-html/Makefile.am: Change the bonus.html build target to run the new script.
	* doc/playbook-html/bonus-extract: Removed.