@@ -4,6 +4,11 @@
 	* doc/spell-docs/spell-summary.txt: New text file with the information
 	  formerly stored in spell-summary.ps.
 	* doc/spell-docs/create_ps.sh: Add a new command to generate spell-summary.ps.
+	* configure.ac: Removed check for memcmp(), srand(), and size_t.
+	  Thes should all be definied correctly in a C99 compiler, which we require.
+	* include/win32.h: Removed reference to HAVE_SRAND macro from autoconfig.h.
+	* include/define.h: Cleaned up RANDOM and SRANDOM macro definitions.
+	  Since we require C99, there should not be a situation where not even srand is found.
 
 2015-12-15  Daniel Hawkins
 	* doc/spell-docs/create_ps.sh: Abstracted the PostScript generation
